# rl-game-1

./: Cargo.toml
src/: main.rs
src/art/: Cargo.toml
src/art/src/: lib.rs
src/components/: Cargo.toml
src/components/src/: camera.rs  lib.rs  render_data.rs  render_id.rs  transform.rs  window_id.rs
src/core/: Cargo.toml
src/core/src/: game.rs  handle_events.rs  lib.rs  render_thread.rs
src/dependencies/: Cargo.toml
src/dependencies/src/: lib.rs
src/event/: Cargo.toml
src/event/src/: lib.rs
src/graphics/: Cargo.toml
src/graphics/src/: lib.rs  pipeline.rs  shaders.rs  textures.rs
src/math/: Cargo.toml
src/math/src/: lib.rs  ortho_helper.rs
src/systems/: Cargo.toml
src/systems/src/: control.rs  lib.rs  render.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs
